Align language button as in main page [fixes #150964173]

--- a/grails-app/assets/stylesheets/elurikkus-common.css
+++ b/grails-app/assets/stylesheets/elurikkus-common.css
@@ -690,6 +690,10 @@ body {
     display: inline-block;
 }
 
+#language-nav {
+    align-self: center;
+}
+
 section {
     margin-bottom: 3rem;
 }
